--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
   - export PATH="${RACKET_DIR}/bin:${PATH}"
 
 install:
- - raco pkg install --auto sbpv
+ - raco pkg install --auto sbpv/
 
 script:
  - raco test --package sbpv
