--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,6 @@ install:
  - raco pkg install --auto sbpv/
 
 script:
- - raco test --drdr sbpv/
- - raco test --drdr -Q examples/
+ - raco test --timeout 120 sbpv/
+ - raco test --timeout 120 examples/
  - raco setup
